# tauri-inventory-manager

./: README.md  package-lock.json  package.json
src/: App.svelte  LogIn.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: client.rs  main.rs  models.rs
src/components/: Header1.svelte  Header2.svelte  SideBar.svelte
src/components/Brands/: Brands.svelte
src/components/Categories/: Categories.svelte
src/components/Dashboard/: Dashboard.svelte
src/components/Orders/: Orders.svelte  Pending.svelte  Received.svelte
src/components/Products/: Products.svelte
src/components/Suppliers/: Suppliers.svelte
src/lib/: Card.svelte  EmailInput.svelte  GroupBox.svelte  Modal.svelte  NumberInput.svelte  PhoneNumberInput.svelte  Search.svelte  types.ts
