[package]
name = "TauriInventoryManager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
ordered-float = "3.0.0"
bigdecimal = { version = "0.3.0", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
lazy_static = "1.4"
chrono = { version = "0.4.2", features = ["serde"] }
anyhow = "1.0"
futures = "0.3.25"
asciimath = "0.8.8"
regex = "1"
rust-fuzzy-search = { git = "https://gitlab.com/EnricoCh/rust-fuzzy-search" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
